Rewrite app with TDD
Added unit tests following TDD principles. Simplified the code, added design patterns, divided the code into smaller parts and organized them into a new package structure